--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,40 @@ body {
 	background-color: black;
 }
 
+#instructions {
+	background-image: url('../images/sflogo.png');
+	background-repeat: no-repeat;
+	background-size: 96%;
+	font-family: Georgia, sans-serif;
+	font-size: 32px;
+	font-weight: bold;
+	float: right;
+	height: 460px;
+	width: 250px;
+	margin: 10px;
+	padding: 10px;
+	margin-right: 50px;
+	background-color: white;
+	text-align: center;
+	border-radius: 5px;
+}
+
+h1 {
+	position: relative;
+	top: 33.333333%;
+}
+
 .main {
 	background-color: white;
+	background-image: url('../images/ehonda.gif');
+	background-size: cover;
 	margin-top: 110px;
 	padding-left: 100px;
 	min-width: 1200px;
 	height: 500px;
 }
 
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.main, .hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
 	background-repeat: no-repeat;
 }
 
@@ -18,12 +43,23 @@ body {
 	float: left;
 }
 
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
 	width: 659px;
 	height: 494px;
 }
 
-.ryu-ready, .ryu-throwing {
+.hadouken {
+	background-image: url('../images/hadouken.gif');
+	width: 156px;
+	height: 90px;
+	display: none;
+	position: relative;
+	top: 167px;
+	left: -212px;
+	float: left;
+}
+
+.ryu-ready, .ryu-throwing, .ryu-cool {
 	display: none;
 }
 
@@ -39,13 +75,6 @@ body {
 	background-image: url('../images/ryu-throwing-hadouken.png');
 }
 
-.hadouken {
-	background-image: url('../images/hadouken.gif');
-	width: 156px;
-	height: 90px;
-	display: none;
-	position: relative;
-	top: 167px;
-	left: -212px;
-	float: left;
+.ryu-cool {
+	background-image: url('../images/ryu-cool.gif');
 }
